# esterian_conquest

./: .gitignore  AGENTS.md  DOOR.SYS  DORINFO1.DEF  LICENSE  README.md  RE_NOTES.md  flake.nix
rust/: Cargo.toml
rust/ec-classic/: Cargo.toml
rust/ec-classic/src/: database.rs  lib.rs  report_blocks.rs
rust/ec-cli/: Cargo.toml
rust/ec-cli/src/: dispatch.rs  lib.rs  main.rs  setup_preset.rs  usage.rs  workspace.rs
rust/ec-cli/tests/: basic.rs  bombard.rs  commands.rs  compliance.rs  econ.rs  fleet.rs  fleet_battle.rs  harness.rs  harness_campaign.rs  init.rs  invade.rs  ipbm.rs  maint.rs  planet.rs  setup.rs  setup_initializer.rs  starbase.rs  storage.rs  submit_turn.rs  sysop.rs  test_setup.rs
rust/ec-client/: Cargo.toml
rust/ec-client/config/: startup.default.kdl  theme-legacy-default.kdl  theme.kdl
rust/ec-client/src/: cli.rs  lib.rs  main.rs  model.rs  reports.rs  theme.rs  util.rs
rust/ec-client/tests/: basic.rs  cosmetic_seed.rs  planet_build.rs  planet_coords.rs  prompt_render.rs  table_widget.rs  theme_config.rs  update.rs
rust/ec-compat/: Cargo.toml
rust/ec-compat/src/: database_projection.rs  intel.rs  lib.rs
rust/ec-connect/: Cargo.toml
rust/ec-connect/src/: cli.rs  companion.rs  dev_seed.rs  gui.rs  input_field.rs  lib.rs  main.rs  map_store.rs  password.rs  paths.rs  platform.rs  shell.rs  text_wrap.rs
rust/ec-connect/tests/: bridge.rs  cache.rs  cli.rs  config.rs  dev_seed.rs  game_discovery.rs  handshake.rs  keychain.rs  launcher.rs  live_response.rs  map_fetch.rs  map_store.rs  picker.rs  platform.rs  resolve.rs  seat_claim.rs  session.rs  session_state.rs  ssh_key.rs  wallet.rs
rust/ec-data/: Cargo.toml
rust/ec-data/config/: config.kdl  diplomacy.example.kdl  setup.example.kdl
rust/ec-data/src/: builder.rs  config.rs  database_projection.rs  directory.rs  economy.rs  fleet_motion_state.rs  game_config.rs  intel.rs  lib.rs  maintenance_types.rs  map_dimensions.rs  map_export.rs  mapgen.rs  movement_geometry.rs  pathfinding.rs  player_mail.rs  report_blocks.rs  rng.rs  starmap.rs  storage.rs  support.rs
rust/ec-data/tests/: builder.rs  campaign.rs  campaign_settings.rs  ecmaint.rs  formats.rs  game_config.rs  hosted_seats.rs  intel.rs  maint_combat.rs  maint_fleet.rs  maint_hardening.rs  maint_timing.rs  maint_year.rs  map_export.rs  mapgen.rs  movement_trace.rs  mutators.rs  pathfinding.rs  player.rs  player_classic_results_chain.rs  player_mail.rs  production.rs  regression.rs  setup_config.rs  setup_initializer.rs  source_policy.rs  starmap.rs  storage.rs  turn_submission.rs
rust/ec-engine/: Cargo.toml
rust/ec-engine/src/: lib.rs
rust/ec-engine/tests/: direct_eta.rs  source_policy.rs
rust/ec-game/: Cargo.toml  build.rs
rust/ec-game/src/: cli.rs  dropfile.rs  error.rs  lib.rs  main.rs  model.rs  reports.rs  submit_turn.rs  theme.rs
rust/ec-game/tests/: basic.rs  color_downgrade.rs  command_label_contract.rs  cosmetic_seed.rs  door_terminal.rs  dropfile.rs  planet_build.rs  planet_coords.rs  prompt_render.rs  quit_confirm.rs  reports_inbox.rs  submit_turn.rs  table_contract.rs  table_selection.rs  table_widget.rs  theme_config.rs  update.rs
rust/ec-gate/: Cargo.toml
rust/ec-gate/src/: cli.rs  lib.rs  main.rs  publish.rs
rust/ec-gate/tests/: claim.rs  config.rs  game_def.rs  identity.rs  integration.rs  invite.rs  invite_bech32.rs  lookup.rs  map.rs  provision.rs  response.rs  roster.rs  routing.rs  serve.rs  state.rs
rust/ec-harness/: Cargo.toml
rust/ec-harness/src/: build.rs  error.rs  lib.rs  parse.rs  run.rs  spec.rs
rust/ec-harness/tests/: harness.rs
rust/ec-log/: Cargo.toml
rust/ec-log/src/: lib.rs
rust/ec-nostr/: Cargo.toml
rust/ec-nostr/src/: hosted.rs  invite.rs  json.rs  lib.rs  tags.rs
rust/ec-nostr/tests/: helpers.rs  hosted.rs  invite.rs
rust/ec-sysop/: Cargo.toml
rust/ec-sysop/src/: main.rs  nostr.rs  nostr_relay.rs  usage.rs
rust/ec-sysop/tests/: basic.rs
rust/ec-tui/: Cargo.toml
rust/ec-tui/src/: lib.rs  main.rs
rust/ec-tui/tests/: cli.rs
rust/ec-ui/: Cargo.toml
rust/ec-ui/src/: lib.rs  modal.rs  paint.rs  prompt.rs  session.rs  table_layout.rs  theme.rs
rust/ec-ui/tests/: modal.rs
rust/nc-classic/: Cargo.toml
rust/nc-classic/src/: support.rs
rust/nc-cli/: Cargo.toml  build.rs
rust/nc-cli/config/: setup.example.kdl
rust/nc-cli/src/: dispatch.rs  main.rs  usage.rs  workspace.rs
rust/nc-cli/tests/: basic.rs  bombard.rs  compliance.rs  econ.rs  fleet.rs  fleet_battle.rs  harness.rs  harness_campaign.rs  init.rs  invade.rs  ipbm.rs  maint.rs  planet.rs  starbase.rs  storage.rs  submit_turn.rs  sysop.rs  test_setup.rs
rust/nc-client/: Cargo.toml
rust/nc-client/src/: cache.rs  config.rs  contacts.rs  lib.rs  password.rs  paths.rs  relay.rs
rust/nc-client/tests/: cache_contacts.rs  cache_release.rs  hosted_state_store.rs
rust/nc-compat/: Cargo.toml
rust/nc-compat/src/: database_projection.rs  intel.rs  lib.rs
rust/nc-connect/: Cargo.toml
rust/nc-connect/src/: cli.rs  companion.rs  dev_seed.rs  gui.rs  hard_quit.rs  input_field.rs  lib.rs  main.rs  map_store.rs  password.rs  shell.rs  text_wrap.rs
rust/nc-connect/tests/: bridge.rs  cache.rs  cli.rs  config.rs  dev_seed.rs  game_discovery.rs  handshake.rs  keychain.rs  launcher.rs  live_response.rs  map_fetch.rs  map_store.rs  picker.rs  platform.rs  resolve.rs  seat_claim.rs  session.rs  session_state.rs  ssh_key.rs
rust/nc-daemon/: Cargo.toml
rust/nc-daemon/src/: dispatch.rs  lib.rs  main.rs
rust/nc-daemon/tests/: invite_flow.rs  protocol_compliance.rs  protocol_kinds.rs  routing.rs  seat_claim.rs  state_sync.rs  status.rs  (+1 more)
rust/nc-dash/: Cargo.toml
rust/nc-data/: Cargo.toml
rust/nc-engine/: Cargo.toml
rust/nc-game/: Cargo.toml  build.rs
rust/nc-gate/: Cargo.toml
rust/nc-harness/: Cargo.toml
rust/nc-helm/: Cargo.toml
rust/nc-host/: Cargo.toml  build.rs
rust/nc-log/: Cargo.toml
rust/nc-nostr/: Cargo.toml
rust/nc-nostr-sysop/: Cargo.toml
rust/nc-session/: Cargo.toml
rust/nc-sysop/: Cargo.toml
rust/nc-ui/: Cargo.toml
rust/opaline/: Cargo.toml  build.rs
(+2105 files in other folders)
