[workspace]
members = ["nc-classic", "nc-data", "nc-engine", "nc-compat", "nc-cli", "nc-game", "nc-dash", "nc-session", "nc-harness", "nc-sysop", "nc-connect", "nc-client", "nc-log", "nc-ui", "nc-nostr", "nc-host", "opaline", "nc-nostr-sysop"]
resolver = "2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[patch.crates-io]
winit = { path = "vendor/winit-0.29.15" }
