[package]
name = "ec-cli"
version = "1.0.0-beta.1"
edition = "2024"
license-file = "../../LICENSE"

[[bin]]
name = "ec-cli"
path = "src/main.rs"

[dependencies]
ec-compat = { path = "../ec-compat" }
ec-data = { path = "../ec-data" }
ec-engine = { path = "../ec-engine" }
ec-harness = { path = "../ec-harness" }
kdl = "6"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
