[package]
name = "ec-connect"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ec-connect"
path = "src/main.rs"

[dependencies]
# Nostr identity + relay handshake
nostr-sdk = { version = "0.44", features = ["nip44"] }

# Wallet encryption: ChaCha20-Poly1305 + PBKDF2-HMAC-SHA256
chacha20poly1305 = "0.10"
pbkdf2 = { version = "0.12", features = ["hmac"] }
sha2 = "0.10"

# Randomness (salt, nonce generation)
rand = "0.8"

# Config/wallet/cache file format
kdl = "6"

# Platform-appropriate config/data directories
dirs = "5"

# Password prompting without echo
rpassword = "7"

# Async runtime (needed for relay handshake in later steps)
# tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

# SSH client
# russh = "..."

# TUI picker screen
# ratatui = "..."

# Terminal raw mode + resize
# crossterm = "0.28"

# CLI argument parsing
# clap = { version = "...", features = ["derive"] }
