[package]
name = "ec-game"
version = "1.0.0-beta.1"
edition = "2024"
license-file = "../../LICENSE"

[[bin]]
name = "ec-game"
path = "src/main.rs"

[dependencies]
crossterm = "0.28"
ec-compat = { path = "../ec-compat" }
ec-data = { path = "../ec-data" }
ec-engine = { path = "../ec-engine" }
ec-ui = { path = "../ec-ui" }
ec-log = { path = "../ec-log" }
kdl = "6"
tracing = "0.1"
