[package]
name = "ec-sysop"
version = "1.0.0-beta.1"
edition = "2024"
license-file = "../../LICENSE"

[[bin]]
name = "ec-sysop"
path = "src/main.rs"

[dependencies]
ec-cli = { path = "../ec-cli" }
ec-data = { path = "../ec-data" }
ec-gate = { path = "../ec-gate" }
ec-log = { path = "../ec-log" }
tracing = "0.1"

[dev-dependencies]
ec-data = { path = "../ec-data" }
