[package]
name = "nc-daemon"
version = "1.0.0-beta.2"
edition = "2024"
license-file = "../../LICENSE"

[[bin]]
name = "nc-daemon"
path = "src/main.rs"

[dependencies]
nc-data = { path = "../nc-data" }
nc-engine = { path = "../nc-engine" }
nc-log = { path = "../nc-log" }
nc-nostr = { path = "../nc-nostr" }
tracing = "0.1"

nostr-sdk = { version = "0.44", features = ["nip44"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
kdl = "4"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
blake3 = "1"
rand = "0.8"
hex = "0.4"
url = "2"

[dev-dependencies]
blake3 = "1"
tempfile = "3"

[build-dependencies]
winresource = "0.1"
