[package]
name = "nc-dash"
version = "1.0.0-beta.2"
edition = "2024"
license-file = "../../LICENSE"

[[bin]]
name = "nc-dash"
path = "src/main.rs"

[dependencies]
crossterm = "0.29"
dirs = "5"
kdl = "6"
fontdue = "0.9"
nc-client = { path = "../nc-client" }
nc-data = { path = "../nc-data" }
nc-engine = { path = "../nc-engine" }
nc-nostr = { path = "../nc-nostr" }
nc-session = { path = "../nc-session" }
nc-log = { path = "../nc-log" }
opaline = { path = "../opaline", default-features = false, features = ["builtin-themes", "gradients"] }
ratatui = "0.30"
serde_json = "1"
softbuffer = "0.4"
tracing = "0.1"
winit = "0.29"
arboard = { version = "3", features = ["wayland-data-control"] }
chrono = { version = "0.4", features = ["serde"] }
