[package]
name = "nc-dash"
version = "1.0.0-beta.2"
edition = "2024"
license-file = "../../LICENSE"

[[bin]]
name = "nc-dash"
path = "src/main.rs"

[dependencies]
crossterm = "0.29"
dirs = "5"
image = { version = "0.25", default-features = false, features = ["ico"] }
kdl = "6"
nc-client = { path = "../nc-client" }
nc-data = { path = "../nc-data" }
nc-engine = { path = "../nc-engine" }
nc-nostr = { path = "../nc-nostr" }
nc-session = { path = "../nc-session" }
nc-log = { path = "../nc-log" }
opaline = { path = "../opaline", default-features = false, features = ["builtin-themes", "gradients"] }
pollster = "0.4"
ratatui = "0.30"
ratatui-wgpu = "0.5"
glyphon = "0.11"
rustybuzz = "0.20.1"
serde_json = "1"
tracing = "0.1"
wgpu = "29.0.0"
winit = "0.30"
arboard = { version = "3", features = ["wayland-data-control"] }
chrono = { version = "0.4", features = ["serde"] }
