[package]
name = "nc-data"
version = "1.0.0-beta.1"
edition = "2024"
license-file = "../../LICENSE"

[lib]
path = "src/lib.rs"

[dependencies]
kdl = "6"
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
nc-compat = { path = "../nc-compat" }
nc-engine = { path = "../nc-engine" }
