[package]
name = "nc-data"
version = "1.0.0-beta.2"
edition = "2024"
license-file = "../../LICENSE"

[lib]
path = "src/lib.rs"

[dependencies]
kdl = "6"
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
blake3 = "1"
nc-nostr = { path = "../nc-nostr" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
nc-compat = { path = "../nc-compat" }
nc-engine = { path = "../nc-engine" }
