[package]
name = "nc-gate"
version = "0.1.0"
edition = "2024"
license-file = "../../LICENSE"

[dependencies]
nc-data = { path = "../nc-data" }
nc-nostr = { path = "../nc-nostr" }
nc-log = { path = "../nc-log" }

# Config/roster parsing
kdl = "6"

# Invite code generation
rand = "0.8"

# Nostr protocol: key generation, bech32 encoding, event signing, NIP-44 encryption
nostr-sdk = { version = "0.44", features = ["nip44"] }

# Async runtime for relay listener
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

# SHA-256 for invite code hashing in 30500 GameDefinition events
sha2 = "0.10"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zstd = "0.13"

# SSH key formatting
# russh-keys = "..."

# Structured async-friendly logging
tracing = "0.1"

# CLI argument parsing
# clap = { version = "...", features = ["derive"] }
