[package]
name = "nc-helm"
version = "1.0.0-beta.2"
edition = "2024"
license-file = "../../LICENSE"

[[bin]]
name = "nc-helm"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std"] }
dirs = "5"
glyphon = "0.11"
nc-client = { path = "../nc-client" }
nc-data = { path = "../nc-data" }
nc-engine = { path = "../nc-engine" }
nc-nostr = { path = "../nc-nostr" }
nc-session = { path = "../nc-session" }
nostr-sdk = { version = "0.44", features = ["nip44"] }
opaline = { path = "../opaline", default-features = false, features = ["builtin-themes"] }
pollster = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
wgpu = "29.0.0"
winit = { version = "0.30", default-features = false, features = ["rwh_06", "x11", "wayland", "wayland-dlopen", "wayland-csd-adwaita-notitle"] }
