[package]
name = "nc-nostr"
version = "1.0.0-beta.2"
edition = "2024"
license-file = "../../LICENSE"

[dependencies]
nostr-sdk = { version = "0.44", features = ["nip44"] }
sha2 = "0.10"
rand = "0.8"
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
blake3 = "1"
zstd = "0.13"
