[package]
name = "nc-sysop"
version = "1.0.0-beta.1"
edition = "2024"
license-file = "../../LICENSE"

[[bin]]
name = "nc-sysop"
path = "src/main.rs"

[dependencies]
nc-data = { path = "../nc-data" }
nc-engine = { path = "../nc-engine" }
nc-gate = { path = "../nc-gate" }
nc-log = { path = "../nc-log" }
nc-nostr = { path = "../nc-nostr" }
nostr-sdk = { version = "0.44", features = ["nip44"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing = "0.1"

[build-dependencies]
winresource = "0.1"

[dev-dependencies]
nc-data = { path = "../nc-data" }
